--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,8 +5,8 @@
     android:background="@android:color/black">
 
     <com.example.acrenderer.RenderDisplay
-        android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_width="@dimen/render_display_size"
+        android:layout_height="@dimen/render_display_size"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
